--- a/images/frontend/src/components/hero/hero.module.scss
+++ b/images/frontend/src/components/hero/hero.module.scss
@@ -15,8 +15,8 @@
 
 .logo {
   font-size: 25px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color:cadetblue
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color:orange
 }
 
 .logoutButton {
