style: Color change for button hover

--- a/images/frontend/src/components/login/login.module.scss
+++ b/images/frontend/src/components/login/login.module.scss
@@ -56,7 +56,7 @@ $button-hover-background-color: #3D5AFE;
       transition: background-color 0.3s;
 
       &:hover {
-        background-color: $button-hover-background-color;
+        background-color: orange;
       }
     }
   }
