--- a/images/frontend/src/components/hero/hero.module.scss
+++ b/images/frontend/src/components/hero/hero.module.scss
@@ -1,6 +1,6 @@
 .hero {
   background-color: #121212;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -16,12 +16,12 @@
 .logo {
   font-size: 25px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color:orange
+  color: orange;
 }
 
 .logoutButton {
-  background-color: #536DFE;
-  color: #FFFFFF;
+  background-color: #536dfe;
+  color: #ffffff;
   border: none;
   border-radius: 4px;
   padding: 8px 16px;
@@ -39,4 +39,20 @@
 
 .welcomeText {
   font-size: 24px;
+}
+
+.journalWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.welcomeWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto; 
 }
