--- a/images/frontend/src/components/journal/form/form.module.scss
+++ b/images/frontend/src/components/journal/form/form.module.scss
@@ -12,6 +12,7 @@ $button-hover-background-color: #3D5AFE;
   padding-bottom: 20px;
   border-radius: 10px;
   max-width: 400px;
+  width: 40%;
 
   input, textarea {
     width: 100%;
