--- a/images/frontend/src/components/journal/list/list.module.scss
+++ b/images/frontend/src/components/journal/list/list.module.scss
@@ -62,6 +62,7 @@ $button-hover-background-color: #3d5afe;
     border: none;
     color: orange;
     font-size: 14px;
+    font-weight: bolder;
     cursor: pointer;
     transition: color 0.3s;
 
